objects/User.object
<CustomObject>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>SDR__c</fullName>
        <label>SDR</label>
        <relationshipName>SDR</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Team</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Long__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <formula>CASESAFEID(UserRoleId)</formula>
        <label>Role ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First Name + Last Name</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <inlineHelpText>Assigned Sales Territory</inlineHelpText>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <formula>CASESAFEID( ProfileId )</formula>
        <label>Profile ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RR_Assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether this person should be assigned new opportunities based on round robin routing.</inlineHelpText>
        <label>RR Assignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <inlineHelpText>Geographic Region</inlineHelpText>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Geographic_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <label>Owner Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Manager</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounts_Owned__c</fullName>
        <inlineHelpText># of accounts owned by user</inlineHelpText>
        <label>Accounts Owned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkRampGroups__c</fullName>
        <description>List of WorkRamp groups this user belongs to.</description>
        <label>WorkRamp Groups</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Temp_Field__c</fullName>
        <label>Admin Temp PB2J Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_User_ID__c</fullName>
        <label>Outreach User ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member__c</fullName>
        <formula>Contains(Text( Team__c ),&quot;AM-&quot;) || Contains(Text( Team__c ),&quot;-AE&quot;) || Contains(Text( Team__c ),&quot;-SDR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>checks if the user&apos;s team is in sales</inlineHelpText>
        <label>Sales Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Segment_Formula__c</fullName>
        <description>Looks at the Team and derives the Segment from it.</description>
        <formula>Case(Text( Team__c ),
&quot;ESB-AE&quot;,&quot;ESB&quot;,
&quot;SMB-AE&quot;,&quot;SMB&quot;,
&quot;MM-AE&quot;,&quot;MM&quot;,
&quot;MM-SDR&quot;,&quot;MM&quot;,
&quot;EN-AE&quot;,&quot;EN&quot;,
&quot;EN-SDR&quot;,&quot;EN&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Segment from Team picklist value</inlineHelpText>
        <label>Team Segment (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Minimum_Deal_Size__c</fullName>
        <inlineHelpText>Minimum $ for a deal to be considered commissionable. Q4 2019: 1K for Velocity &amp; 5K for Solution</inlineHelpText>
        <label>Commission Minimum Deal Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>Team__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Team_CSM</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Team__c</columns>
        <columns>Territory__c</columns>
        <columns>SDR__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>csm</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>csm</value>
        </filters>
        <label>Team-CSM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Team_ESB</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Team__c</columns>
        <columns>Territory__c</columns>
        <columns>SDR__c</columns>
        <columns>Owner_Manager__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>ESB</value>
        </filters>
        <label>Team ESB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Team_SDR</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Team__c</columns>
        <columns>Territory__c</columns>
        <columns>SDR__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>SDR</value>
        </filters>
        <label>Team-SDR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Team_AE_ENT</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Team__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>Territory__c</columns>
        <columns>SDR__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.FORECAST_ENABLED</columns>
        <columns>MANAGER</columns>
        <columns>Start_Date__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>en-ae,en-em-ae,en-na-ae</value>
        </filters>
        <label>Team-EN AEs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Team_MM_AEs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Team__c</columns>
        <columns>Territory__c</columns>
        <columns>SDR__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>MM-AE</value>
        </filters>
        <label>Team-MM AEs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Team_SMB_AE</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Team__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>Owner_Manager__c</columns>
        <columns>Territory__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>SDR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>SMB-AE</value>
        </filters>
        <label>Team-SMB AEs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Transitions</fullName>
        <columns>FULL_NAME</columns>
        <columns>Full_Name__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Sales_Region__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>Owner_Manager__c</columns>
        <columns>Territory__c</columns>
        <columns>Team__c</columns>
        <columns>Sales_Team_Member__c</columns>
        <columns>SDR__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>notEqual</operation>
            <value>Comm-CSM,Scale-CSM,Ent-CSM,Other,RevOps,System/Automation</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>_</value>
        </filters>
        <label>Transitions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Sales_Region__c</columns>
        <columns>Owner_Manager__c</columns>
        <columns>Territory__c</columns>
        <columns>SDR__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Team__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Placeholders</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Sales_Region__c</columns>
        <columns>Owner_Manager__c</columns>
        <columns>Territory__c</columns>
        <columns>Team__c</columns>
        <columns>Sales_Team_Member__c</columns>
        <columns>SDR__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>notEqual</operation>
            <value>Comm-CSM,Scale-CSM,Ent-CSM,Other,RevOps,System/Automation</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>placeholder</value>
        </filters>
        <label>Placeholders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Team_AEs_All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Team__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>Territory__c</columns>
        <columns>SDR__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Owner_Manager__c</columns>
        <columns>CORE.USERS.FORECAST_ENABLED</columns>
        <columns>Start_Date__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>ae</value>
        </filters>
        <label>Team-All AEs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>integration,sync</value>
        </filters>
        <label>Admin Users - Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Team_UpMarket_AEs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Sales_Region__c</columns>
        <columns>Owner_Manager__c</columns>
        <columns>Territory__c</columns>
        <columns>SDR__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Team__c</columns>
        <columns>Sales_Team_Member__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>MM-AE,EN-AE</value>
        </filters>
        <label>Team-UpMarket AEs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Integration_Users</fullName>
        <booleanFilter>(1 AND 2) OR (2 AND 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Integration,Sync,SFDC,User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Ott,Ziakova,Datateam,Sec-line-Controls</value>
        </filters>
        <label>Admin Users - Active Integration Users</label>
        <language>en_US</language>
        <sharedTo>
            <role>SalesOps_Admin</role>
        </sharedTo>
    </listViews>
</CustomObject>